# ffmpeg-lightweight-video-compressor

./: .gitignore  LICENSE  README.md  converter.py  ffmpeg-lightweight-video-compressor.spec  main.py  more_dependency_version.py  pyproject.toml
